--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.6.0",
     "react-scripts": "4.0.3",
     "react-typed": "^1.2.0",
+    "tsparticles": "^1.37.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
