--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "react": "^17.0.2",
+    "react": "^16.0.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.2",
     "react-particles-js": "^3.6.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
+    "scroll": "^3.0.1",
     "tsparticles": "^1.37.4",
     "web-vitals": "^1.1.2"
   },
