--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://sibonisot.github.io/Portfolio/",
   "name": "portfolio_ct",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^3.2.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^16.0.0",
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
