--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.6.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-typed": "^1.2.0",
     "tsparticles": "^1.37.4",
     "web-vitals": "^1.1.2"
